<resources>
    <string name="app_name" translatable="false">xvii</string>
    <string name="about_app">about</string>
    <string name="settings">settings</string>
    <string name="addons">add-ons</string>
    <string name="share_on_wall">share xvii on my wall</string>
    <string name="share">share</string>
    <string name="share_image">share the image</string>
    <string name="last_seen">seen: %s</string>
    <string name="online_seen">online: %s</string>
    <string name="status">status</string>
    <string name="write_message">write message</string>
    <string name="doenloaded">%s has been downloaded</string>
    <string name="unable_to_write">you can\'t write this user</string>
    <string name="keys_not_set">keys aren\'t set</string>
    <string name="feedback">support</string>
    <string name="copied">%s has been copied to clipboard</string>
    <plurals name="friends">
        <item quantity="one">%s friend</item>
        <item quantity="other">%s friends</item>
    </plurals>
    <string name="dialogs">dialogs</string>
    <string name="mphone">mobile phone</string>
    <string name="hphone">home phone</string>
    <string name="site">site</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="twitter" translatable="false">twitter</string>
    <string name="logout">log out</string>
    <string name="error">error</string>
    <string name="bytes">%d b</string>
    <string name="kilobytes">%s kb</string>
    <string name="megabytes">%s mb</string>
    <string name="link">link</string>
    <string name="add_shortcut">add shortcut</string>
    <string name="wall_post">wall post</string>
    <string name="poll_public">public poll</string>
    <string name="poll_anon">anonymous poll</string>
    <string name="poll">poll</string>
    <string name="copy">copy</string>
    <string name="reply">reply</string>
    <string name="decrypted">decrypt: %s</string>
    <string name="wanna_change_theme">you\'ve changed the theme. app will be restated. continue?</string>
    <string name="unread100" translatable="false">99+</string>
    <string name="accounts">accounts</string>
    <string name="rate">rate</string>
    <string name="contribute">contribute</string>
    <string name="gallery">gallery</string>
    <string name="delete">delete</string>
    <string name="pin">pin</string>
    <string name="unpin">unpin</string>
    <string name="alias">alias</string>
    <string name="unmark">unmark</string>
    <string name="join_us">follow xvii official group in vk for latest news about the app</string>
    <string name="download">download</string>
    <string name="add_to_saved">save to album</string>
    <string name="added_to_saved">photo has been saved to album</string>
    <string name="notifications">notifications</string>
    <string name="general">general</string>
    <string name="analyse">analyser</string>
    <string name="in_future_versions">coming soon..</string>
    <string name="not_found">oops.. nothing found!\ntry to change your query</string>
    <string name="cannot_delete_acc">you cannot delete running account</string>
    <string name="already_acc">this account is already in use</string>
    <string name="error_message">attachments</string>
    <string name="voice_message">voice message</string>
    <string name="choose_dialog">choose dialog</string>
    <string name="theme_changed">theme is changed. app is being restarted..</string>
    <string name="clear" translatable="false">clr</string>
    <string name="incorrect_pin">incorrect</string>
    <string name="confirm_pin">confirm your pin</string>
    <string name="enter_pin">enter pin</string>
    <string name="enter_new_pin">enter new pin</string>
    <string name="reset">reset</string>
    <string name="edit">edit</string>
    <string name="updated_succ">updated successfully</string>
    <string name="reset_succ">reset successfully</string>
    <string name="dont_match">pins don\'t match</string>
    <string name="have_pin">you already have a pin</string>
    <string name="instagram" translatable="false">instagram</string>
    <plurals name="attachments">
        <item quantity="one">%d attachment</item>
        <item quantity="other">%d attachments</item>
    </plurals>
    <string name="attach">attach..</string>
    <string name="important">important messages</string>
    <string name="markasimportant">mark as important</string>
    <string name="not_playable_video">video is not playable</string>
    <string name="mark_as_read">mark as read</string>
    <string name="docs">docs</string>
    <string name="photos">photos</string>
    <string name="videos">videos</string>
    <string name="links">links</string>
    <string name="forward">forward</string>
    <string name="appearance">appearance</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="terms_of_service">terms of service</string>
    <string name="source_code">source code</string>
    <string name="new_title">new title</string>
    <string name="chat_created">%s created the chat</string>
    <string name="chat_title_updated">%1$s updated chat title: \"%2$s\"</string>
    <string name="chat_photo_updated">%s updated chat photo</string>
    <string name="chat_photo_removed">%s removed chat photo</string>
    <string name="user_leaved_chat">%s left chat</string>
    <string name="user_invited_user">%1$s invited %2$s</string>
    <string name="user_entered_chat">%s entered the chat</string>
    <string name="user_entered_chat_via_link">%s entered the chat via link</string>
    <string name="user_kicked_user">%1$s kicked %2$s out of chat</string>
    <string name="user_pinned_message">%1$s pinned message: \"%2$s\"</string>
    <string name="user_unpinned_message">%1$s unpinned message: \"%2$s\"</string>
    <string name="ten_attachments">you cannot add more than 10 attachments</string>
    <string name="led_lights">led color</string>
    <string name="change_keys">change keys</string>
    <string name="random_key">generate randomly</string>
    <string name="user_key">enter own key</string>
    <string name="key_set">keys were set successfully</string>
    <string name="empty_user_key">key mustn\'t be empty!</string>
    <plurals name="messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="encryption">secret chat</string>
    <string name="attach_logs">attach logs</string>
    <string name="block_user">block user</string>
    <string name="unblock_user">unblock user</string>
    <string name="block_user_confirmation">do you really want to block this user?</string>
    <string name="report_title">report</string>
    <string name="report_reported">successfully reported</string>
    <string name="report_reason_porn">pornography</string>
    <string name="report_reason_cp">child pornography</string>
    <string name="report_reason_violence">violence</string>
    <string name="report_reason_drugs">drug propaganda</string>
    <string name="report_reason_adult">adult material</string>
    <string name="report_reason_spam">spamming</string>
    <string name="report_reason_insult">abusive behavior</string>
    <string name="report_reason_advertisement">disruptive advertisements</string>
    <string name="restart_app">restarting app..</string>
    <string name="restart">restart app</string>
    <string name="restart_send_crash">send details to developer</string>
    <string name="hidden_message">message</string>
    <string name="shared">shared successfully</string>
    <string name="audios">audio</string>
    <string name="conversation">conversation</string>
    <string name="community">community</string>
    <string name="want_delete">do you really want to delete %s?</string>
    <string name="uncaught_exception">something went wrong..</string>
    <string name="send_report">send report</string>
    <string name="take_photo">camera</string>
    <string name="add_doc">document</string>
    <string name="report_sent">report was sent</string>
    <string name="describe_actions">describe what happened</string>
    <string name="add_to_docs">add to docs</string>
    <string name="added_to_docs">successfully added to docs</string>
    <string name="clear_cache">clear cache</string>
    <string name="refresh_stickers">refresh stickers</string>
    <string name="stickers_refreshed">stickers have been refreshed</string>
    <string name="wanna_logout">do you really want to log out?</string>
    <string name="not_now">not now</string>
    <string name="never">never</string>
    <string name="private_messages_notifs">private messages</string>
    <string name="chats_notifs">other messages</string>
    <string name="delete_for_all">delete for all users</string>
    <string name="delete_only_for_me">delete only for me</string>
    <string name="wanna_delete_messages">do you really want to delete these messages?</string>
    <string name="search_hint">search</string>
    <string name="be_offline">be offline</string>
    <string name="be_offline_hint">set offline status automatically</string>
    <string name="show_chat_activity">show chat activity</string>
    <string name="show_chat_activity_hint">people can see if you are typing or recording a voice message</string>
    <string name="mark_messages_as_read">mark messages as read</string>
    <string name="mark_messages_as_read_hint">people will see that you read messages</string>
    <string name="show_seconds">show seconds</string>
    <string name="show_seconds_hint">time stamps will be with seconds</string>
    <string name="use_lowercase">use lower case</string>
    <string name="use_lowercase_hint">names and inputs will be in lower case</string>
    <string name="use_apples_emojis">use apple\'s emojis</string>
    <string name="use_apples_emojis_hint">use the most common and recognizable emojis</string>
    <string name="show_stickers">show stickers/emojis icon</string>
    <string name="show_stickers_hint">you will be able to send them</string>
    <string name="show_voice">show voice messaging icon</string>
    <string name="show_voice_hint">you will be able to send voice messages</string>
    <string name="store_custom_keys">store custom keys</string>
    <string name="store_custom_keys_hint">keys will not be cleared after exit</string>
    <string name="show_notifications">show notifications</string>
    <string name="show_notifications_private_hint">from private chats</string>
    <string name="show_notifications_chats_hint">from public conversations</string>
    <string name="show_senders_name">show sender\'s name</string>
    <string name="show_senders_name_hint">sender\'s name will appear in notification</string>
    <string name="show_message_content">show content</string>
    <string name="show_message_content_hint">the content of message will appear in notification</string>
    <string name="use_styled_notifications">use stylish notifications</string>
    <string name="use_styled_notifications_hint">notifications will be painted according to users\' avatars</string>
    <string name="vibrate">enable vibration</string>
    <string name="make_sound">enable sound</string>
    <string name="scheduled_messages_title">scheduled messages</string>
    <string name="pin_settings_title">security</string>
    <string name="notifications_open_settings_private">change settings of private messages</string>
    <string name="notifications_open_settings_other">change settings of other messages</string>
    <string name="notifications_open_settings">open notification settings</string>
    <string name="journal_title">journal (beta)</string>
    <string name="accounts_hint">you can add as much accounts as you want. only one account can be active at a time. only active account can receive notifications</string>
    <string name="aboutbig">xvii messenger (by twoeightnine)\nver. %1$s since %2$s</string>
    <string name="other">other</string>
</resources>