<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchOffline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/be_offline_hint"
                android:text="@string/be_offline" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchTyping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/show_chat_activity_hint"
                android:text="@string/show_chat_activity" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mark_messages_as_read_hint"
                android:text="@string/mark_messages_as_read" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchShowSeconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/show_seconds_hint"
                android:text="@string/show_seconds" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchLowerTexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/use_lowercase_hint"
                android:text="@string/use_lowercase" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchAppleEmojis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/use_apples_emojis_hint"
                android:text="@string/use_apples_emojis" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchShowStickers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/show_stickers_hint"
                android:text="@string/show_stickers" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchShowVoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/show_voice_hint"
                android:text="@string/show_voice" />

            <com.twoeightnine.root.xvii.views.XviiSwitch
                android:id="@+id/switchStoreKeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_custom_keys_hint"
                android:text="@string/store_custom_keys" />

            <Button
                android:id="@+id/btnClearCache"
                style="@style/AccentButton"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="6dp"
                android:drawableStart="@drawable/ic_delete"
                android:text="@string/clear_cache" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>