<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <com.twoeightnine.root.xvii.uikit.XviiToolbar
        android:id="@+id/xviiToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/notifications" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svContent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.twoeightnine.root.xvii.uikit.XviiLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/private_messages_notifs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchShowNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/show_notifications_private_hint"
                    android:text="@string/show_notifications" />


                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/show_message_content_hint"
                    android:text="@string/show_message_content" />

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchShowName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/show_senders_name_hint"
                    android:text="@string/show_senders_name" />

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchVibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate" />

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchSound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/make_sound" />

                <com.twoeightnine.root.xvii.views.XviiColorSelect
                    android:id="@+id/csLed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/led_lights" />

                <com.twoeightnine.root.xvii.uikit.XviiButton
                    android:id="@+id/btnSettingsPrivate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/notifications_open_settings_private" />

            </LinearLayout>

            <com.twoeightnine.root.xvii.uikit.XviiLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chats_notifs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchNotifsChats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/show_notifications_chats_hint"
                    android:text="@string/show_notifications" />

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchContentChats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/show_message_content_hint"
                    android:text="@string/show_message_content" />

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchVibrateChats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate" />

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchSoundChats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/make_sound" />

                <com.twoeightnine.root.xvii.views.XviiColorSelect
                    android:id="@+id/csLedChats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/led_lights" />

                <com.twoeightnine.root.xvii.uikit.XviiButton
                    android:id="@+id/btnSettingsOther"
                    style="@style/AccentButton"
                    android:layout_width="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/notifications_open_settings_other" />

                <com.twoeightnine.root.xvii.uikit.XviiLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

                <com.twoeightnine.root.xvii.views.XviiSwitch
                    android:id="@+id/switchStylizeNotifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/use_styled_notifications_hint"
                    android:text="@string/use_styled_notifications" />

                <com.twoeightnine.root.xvii.uikit.XviiButton
                    android:id="@+id/btnSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/notifications_open_settings" />

                <Switch
                    android:id="@+id/switchEgg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>