<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.twoeightnine.root.xvii.uikit.XviiToolbar
        android:id="@+id/xviiToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backArrow="false"
        android:alpha="0" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/bottom_navigation_height"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlAccounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_rect">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civPhoto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="12dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/civPhoto"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/MainBoldText"
                        android:paddingTop="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        tools:text="gucci mane" />

                    <TextView
                        android:id="@+id/tvLastSeen"
                        style="@style/OtherText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        tools:text="last seen 45:67"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvSwitchAccount"
                        style="@style/OtherText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:text="@string/accounts_hint"
                        android:textSize="@dimen/user_info_text_size" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_arrow_right"
                    android:tag="main" />

            </RelativeLayout>

            <com.twoeightnine.root.xvii.uikit.XviiLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="56dp"
                android:text="@string/addons" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiAnalyze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:itemTitle="@string/analyse"
                app:itemIcon="@drawable/ic_analysis" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiStarred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/important"
                app:itemIcon="@drawable/ic_star" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiScheduledMessages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/scheduled_messages_title"
                app:itemIcon="@drawable/ic_clock" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiJournal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/journal_title"
                app:itemIcon="@drawable/ic_clock" />

            <com.twoeightnine.root.xvii.uikit.XviiLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="56dp"
                android:text="@string/settings" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/general"
                app:itemIcon="@drawable/ic_general" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/notifications"
                app:itemIcon="@drawable/ic_notifications" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/appearance"
                app:itemIcon="@drawable/ic_appearance" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiSecurity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/pin_settings_title"
                app:itemIcon="@drawable/ic_padlock" />

            <com.twoeightnine.root.xvii.uikit.XviiLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="56dp"
                android:text="@string/about_app" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/feedback"
                app:itemIcon="@drawable/ic_support" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/rate"
                app:itemIcon="@drawable/ic_star" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/share_on_wall"
                app:itemIcon="@drawable/ic_share" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/privacy_policy"
                app:itemIcon="@drawable/ic_privacy" />

            <com.twoeightnine.root.xvii.uikit.XviiItem
                android:id="@+id/xiSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/source_code"
                app:itemIcon="@drawable/ic_source_code" />

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/other_text"
                android:gravity="center_horizontal"
                android:text="@string/aboutbig" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>